--- a/android-viewradar/wear/src/main/res/values/strings.xml
+++ b/android-viewradar/wear/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Campanion</string>
+    <string name="app_name">Companion</string>
     <string name="action_switch_0">Rear camera</string>
     <string name="action_switch_1">Front camera</string>
     <string name="action_flash_0">Flash off</string>
