[Android] Final version

--- a/android-viewradar/mobile/src/main/res/values/strings.xml
+++ b/android-viewradar/mobile/src/main/res/values/strings.xml
@@ -4,12 +4,11 @@
     <string name="app_name">Viewrader</string>
     <string name="action_settings">Settings</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
     <string name="camera_startup">Camera aan bij het opstarten</string>
-    <string name="set_range">Stel de afstand voor de sensor in centimeter(nu %1$d cm):</string>
+    <string name="connecting">Aan het verbinden…</string>
+    <string name="set_range">Stel de afstand voor de sensor in (nu %1$d cm):</string>
+    <string name="select_device">Kies een apparaat uit uw gekoppelde apparaten:</string>
+    <string name="connect_device">If no devices are listed please pair your device in Android settings</string>
     <string name="main_activity_text">Je kunt de app nu verlaten, maar sluit de app niet af!</string>
-    <string name="title_activity_splash">SplashActivity</string>
 
 </resources>
